--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,9 @@ command = "npm run build"
   from = "/*"
   to = "/index.html"
   status = 200
+
+# Ensure image paths work correctly
+[[redirects]]
+  from = "/images/*"
+  to = "/images/:splat"
+  status = 200
