--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "build": "vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
+        "build": "vite build && cp -r images dist/"
+}
     },
     "dependencies": {
         "date-fns": "^2.30.0",
